# chunk-norris

./: .prettierrc  LICENSE  README.md  jest.config.js  package.json  vue.config.js
backendApp/: manage.sh  pyproject.toml
backendApp/app/: __init__.py  services.py  settings.py  views.py
src/: App.vue
src/api/: httpClient.js
src/assets/styles/: main.scss
src/components/: ActionButton.vue  Checkbox.vue  Joke.vue  JokeList.vue  SearchBar.vue
src/components/images/: IconStar.vue
src/views/: Categories.vue  Jokes.vue  Overview.vue
tests/unit/: Categories.spec.js  Joke.spec.js  JokeList.spec.js  Jokes.spec.js  Overview.spec.js
