[tool.poetry]
name = "big-norris"
version = "0.1.0"
description = ""
authors = ["Kidz55"]

[tool.poetry.dependencies]
python = ">=3.7.0,<3.9.0"
flask = "~1.0.0"
requests = ">=2.21.0"
python-dotenv = "^0.14.0"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-flakes = "*"
responses = "*"
black = {version = "*", allow-prereleases = true}
isort = "*"
ipdb = "^0.13.4"
